IntersectionObserver: compute correct intersection ratio for 0x0 elements

When a 0x0 element is in view, its intersection ratio is defined[1] to
be 1.

BUG=662826

[1] https://wicg.github.io/IntersectionObserver/#update-intersection-observations-algo

Review-Url: https://codereview.chromium.org/2556243003
Cr-Commit-Position: refs/heads/master@{#437617}

Former-commit-id: 8296d3b0e6a755dabf607b78a259f86803699d88